Mixed Files Resource
- Create a new files resource that combines path and list files
- Add a configuration property to specify the files directory
- Add and adjust unit tests

--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -18,7 +18,8 @@ spring:
       max-request-size: 10240MB
 
 app:
-  basepath: # Set here the path to the folder you want to use as storage
+  basepath: # Path to the folder to be used as storage
+  filesDirPath: # Path to the folder to be used for the user/groups files
   security:
     tokenHash: bio-local
     environment: LOCAL
