Mixed Files Resource (#58)
* Mixed Files Resource

- Create a new files resource that combines path and list files
- Add a configuration property to specify the files directory
- Add and adjust unit tests
- Create an extension to boolean in order to execute a function depending on its value

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -18,7 +18,8 @@ spring:
       max-request-size: 10240MB
 
 app:
-  basepath: # Path to the folder that will be used as storage
+  basepath: # Absolute path to the folder to be used as storage
+  filesDirPath: # Absolute path to the folder to be used for the user/groups files
   security:
     tokenHash: # Token used for hash authentication
     environment: # Current application execution environment
