--- a/submission/notifications/build.gradle
+++ b/submission/notifications/build.gradle
@@ -1,8 +1,9 @@
 import static Dependencies.KotlinStdLib
 import static Dependencies.RxJava2
+import static SpringBootDependencies.SpringBootStarterMail
 
 dependencies {
-    implementation("org.springframework.boot:spring-boot-starter-mail:2.1.5.RELEASE")
+    implementation("$SpringBootStarterMail:${Versions.SpringBootVersion}")
     implementation(KotlinStdLib)
     implementation(RxJava2)
 }
