--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -1,27 +1,27 @@
 build-submitter:
   stage: build
-  script: ./gradlew :submission:submission-webapp:bootJar
+  script: gradle :submission:submission-webapp:bootJar
   artifacts:
     paths:
-      - "submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar"
+      - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
 
 deploy-dev-submitter:
   stage: deploy-dev-submitter
   when: manual
   dependencies:
     - build-submitter
-  script: "./gradlew deploySubmitter -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/submitter/dev"
+  script: gradle deploySubmitter -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/submitter/dev
 
 deploy-beta-submitter:
   stage: deploy-beta-submitter
   when: manual
   dependencies:
     - build-submitter
-  script: "./gradlew deploySubmitter -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/submitter/beta"
+  script: gradle deploySubmitter -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/submitter/beta
 
 deploy-prod-submitter:
   stage: deploy-prod-submitter
   when: manual
   dependencies:
     - build-submitter
-  script: "./gradlew deploySubmitter -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/submitter/prod"
+  script: gradle deploySubmitter -Penv=prod -PdeployPath=/nfs/biostudies/.adm/apps/submitter/prod
