--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -20,6 +20,7 @@ spring:
 app:
   basepath: # Path to the folder to be used as storage
   filesDirPath: # Path to the folder to be used for the user/groups files
+  tmpDirPath: # Absolute of the temp folder to store files
   security:
     tokenHash: bio-local
     environment: LOCAL
