--- a/submission/submission-webapp/src/itest/resources/application.yml
+++ b/submission/submission-webapp/src/itest/resources/application.yml
@@ -13,10 +13,11 @@ spring:
 
 app:
   basepath:
-  filesDirPath:
+  tempDirPath:
   security:
     tokenHash: biostd-test
     environment: TEST
+    filesDirPath:
     requireActivation: false
   notifications:
     smtp:
