--- a/submission/persistence/build.gradle
+++ b/submission/persistence/build.gradle
@@ -11,6 +11,7 @@ plugins {
 dependencies {
     compile project(":commons:commons-util")
     compile project(":commons:commons-bio")
+    compile project(":commons:commons-model-extended")
 
     compile(HibernateEntityManager)
     compile(SpringDataJpa)
