--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
 
 app:
   basepath: # Absolute path to the folder to be used as storage
-  tmpDirPath: # Absolute of the temp folder to store files
+  tempDirPath: # Absolute of the temp folder to store files
   security:
     tokenHash: # Token used for hash authentication
     filesDirPath: # Absolute path to the folder to be used for the user/groups files
