--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include("commons:commons-util")
 include("commons:commons-bio")
 include("commons:commons-http")
 include("commons:commons-serialization")
+include("commons:commons-model-extended")
 include("commons:commons-test")
 include("commons:commons-transpiler")
 
