added extended model (#80)
* added extended model

--- a/submission/submission-webapp/build.gradle
+++ b/submission/submission-webapp/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     testCompile(SpringBootStarterTest)
     testCompile(H2)
     testCompile(KotlinXmlBuilder)
+    testCompile(JsonAssert)
 }
 
 sourceSets {
