--- a/scheduler/scheduler/build.gradle
+++ b/scheduler/scheduler/build.gradle
@@ -19,6 +19,7 @@ repositories {
 dependencies {
     compile project(":scheduler:cluster-client")
     compile(project(":scheduler:task-properties"))
+    compile(project(":commons:commons-http"))
 
     compile(KotlinLogging)
     compile(SpringBootStarter)
