--- a/scheduler/scheduler/build.gradle
+++ b/scheduler/scheduler/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile(project(":scheduler:task-properties"))
     compile(project(":commons:commons-http"))
 
+    compile(SpringBootStartedAdminClient)
     compile(KotlinLogging)
     compile(SpringBootStarter)
     compile(SpringBootStarterConfigProcessor)
