--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,7 @@ include:
   - local: '/ci/submitter.yml'
   - local: '/ci/pmc-processor.yml'
   - local: '/ci/scheduler.yml'
+  - local: '/ci/bio-admin.yml'
 
 stages:
   - build-test
