--- a/commons/commons-serialization/build.gradle
+++ b/commons/commons-serialization/build.gradle
@@ -9,6 +9,7 @@ dependencies {
     compile(JacksonKotlin)
     compile(JacksonXml)
     compile(Woodstox)
+    compile(Gson)
     compile(Guava)
     compile(Arrow)
 
