added support for invalid tickets

--- a/submission/submission-webapp/src/main/resources/application-local.yml
+++ b/submission/submission-webapp/src/main/resources/application-local.yml
@@ -25,3 +25,5 @@ app:
     filesDirPath: # Absolute path to the folder to be used for the user/groups files
     environment: LOCAL
     requireActivation: false
+  notifications:
+    smtp: smtp.ebi.ac.uk
