--- a/deploy.gradle
+++ b/deploy.gradle
@@ -81,6 +81,7 @@ task deploy {
                 execute "sed -i -e 's~APP_PORT~$appPort~g' $deployPath/update.sh"
                 execute "sed -i -e 's~APP_NAME~$artifactName~g' $deployPath/update.sh"
                 execute "sed -i -e 's~DEBUG_PORT~$debugPort~g' $deployPath/update.sh"
+                execute "sed -i -e 's~JVM_PARAMS~$jvmParams~g' $deployPath/update.sh"
 
                 execute "chmod +x $deployPath/update.sh"
                 execute "sh $deployPath/update.sh"
