--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -10,7 +10,7 @@ deploy-dev-submitter:
   when: manual
   dependencies:
     - build-submitter
-  script: gradle deploySubmitter -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/submitter/dev
+  script: gradle deploySubmitter --stacktrace -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/submitter/dev
 
 deploy-beta-submitter:
   stage: deploy-beta-submitter
