--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -10,14 +10,14 @@ deploy-dev-submitter:
   when: manual
   dependencies:
     - build-submitter
-  script: gradle deploySubmitter --stacktrace -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/submitter/dev
+  script: gradle deploySubmitter -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/submitter/dev
 
 deploy-beta-submitter:
   stage: deploy-beta-submitter
   when: manual
   dependencies:
     - build-submitter
-  script: gradle deploySubmitter --stacktrace -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/submitter/beta -PjvmParams=-Xmx2g
+  script: gradle deploySubmitter -Penv=beta -PdeployPath=/nfs/biostudies/.adm/apps/submitter/beta -PjvmParams=-Xmx2g
 
 deploy-prod-submitter:
   stage: deploy-prod-submitter
