--- a/deploy.gradle
+++ b/deploy.gradle
@@ -25,7 +25,6 @@ task deploySubmitter {
     doFirst {
         project.ext.artifactPath = "submission/submission-webapp/build/libs"
         project.ext.artifactName = "submission-webapp-1.0.0.jar"
-        project.ext.jvmParams = "-Xmx1g"
         project.ext.appPort = 8788
         project.ext.debugPort = 8003
     }
@@ -37,7 +36,6 @@ task deployScheduler {
     doFirst {
         project.ext.artifactPath = "scheduler/scheduler/build/libs"
         project.ext.artifactName = "scheduler-1.0.0.jar"
-        project.ext.jvmParams = "-Xmx1g"
         project.ext.appPort = 8689
         project.ext.debugPort = 8104
     }
@@ -49,7 +47,6 @@ task deployBioAdmin {
     doFirst {
         project.ext.artifactPath = "bio-admin/build/libs"
         project.ext.artifactName = "bio-admin-1.0.0.jar"
-        project.ext.jvmParams = "-Xmx1g"
         project.ext.appPort = 8590
         project.ext.debugPort = 8205
     }
@@ -84,7 +81,12 @@ task deploy {
                 execute "sed -i -e 's~APP_PORT~$appPort~g' $deployPath/update.sh"
                 execute "sed -i -e 's~APP_NAME~$artifactName~g' $deployPath/update.sh"
                 execute "sed -i -e 's~DEBUG_PORT~$debugPort~g' $deployPath/update.sh"
-                execute "sed -i -e 's~JVM_PARAMS~$jvmParams~g' $deployPath/update.sh"
+
+                if (project.hasProperty("jvmParams")) {
+                    execute "sed -i -e 's~JVM_PARAMS~$jvmParams~g' $deployPath/update.sh"
+                } else {
+                    execute "sed -i -e 's~JVM_PARAMS~~g' $deployPath/update.sh"
+                }
 
                 execute "chmod +x $deployPath/update.sh"
                 execute "sh $deployPath/update.sh"
