--- a/commons/commons-util/build.gradle
+++ b/commons/commons-util/build.gradle
@@ -8,6 +8,8 @@ dependencies {
     compile(KotlinReflect)
 
     // Apache commons
+    compile(Poi)
+    compile(PoiOxml)
     compile(CommonsLang3)
 
     // General test dependencies
