--- a/commons/commons-test/build.gradle
+++ b/commons/commons-test/build.gradle
@@ -1,11 +1,13 @@
 import static Dependencies.Arrow
 import static Dependencies.KotlinStdLib
 import static TestDependencies.AssertJ
+import static TestDependencies.JunitExtensions
 
 dependencies {
     compile(project(":commons:commons-bio"))
 
     compile(Arrow)
     compile(AssertJ)
+    compile(JunitExtensions)
     compile(KotlinStdLib)
 }
