--- a/commons/commons-http/build.gradle
+++ b/commons/commons-http/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     compile(JacksonKotlin)
     compile(JacksonCore)
     compile(SpringWeb)
+    compileOnly(ServletApi)
 
     testCompile(BaseTestCompileDependencies)
     testRuntime(BaseTestRuntimeDependencies)
