Submission File Verification
- Finish JSON verification
- Start working on XML verification

--- a/submission/submission-webapp/build.gradle
+++ b/submission/submission-webapp/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     testCompile(H2)
     testCompile(KotlinXmlBuilder)
     testCompile(JsonAssert)
+    testCompile(XmlUnitCore)
+    testCompile(XmlUnitAssertJ)
 }
 
 sourceSets {
