Submission File Verification
- Finish XML verification
- Start working on TSV verification

--- a/submission/submission-webapp/build.gradle
+++ b/submission/submission-webapp/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     testCompile(KotlinXmlBuilder)
     testCompile(JsonAssert)
     testCompile(XmlUnitCore)
-    testCompile(XmlUnitAssertJ)
+    testCompile(XmlUnitMatchers)
 }
 
 sourceSets {
