Provide Acc No Privilege
- Create a service to validate user privileges
- Add validations to allow only super users to provide accession number for submissions
- Update integrations tests to register super users

--- a/submission/submitter/build.gradle
+++ b/submission/submitter/build.gradle
@@ -6,6 +6,7 @@ dependencies {
     compile(project(":commons:commons-bio"))
     compile(project(":commons:commons-util"))
     compile(project(":commons:commons-serialization"))
+    compile(project(":submission:submission-security"))
 
     compile(CommonsIO)
 
