Generic Root Section
- Add documentation for BioStudies CLI (PTSubmit)
- Add CI manual step to deploy new CLI versions when required

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ include:
   - local: '/ci/pmc-processor.yml'
   - local: '/ci/scheduler.yml'
   - local: '/ci/bio-admin.yml'
+  - local: '/ci/bio-commandline.yml'
 
 stages:
   - build-test
@@ -18,6 +19,7 @@ stages:
   - deploy-beta-scheduler
   - deploy-prod-scheduler
   - deploy-bio-admin
+  - deploy-bio-commandline
 
 build-test:
   stage: build-test
