--- a/deploy.gradle
+++ b/deploy.gradle
@@ -54,6 +54,14 @@ task deployBioAdmin {
     finalizedBy "deploy"
 }
 
+task deployBioCommandLine {
+    doFirst {
+        project.ext.artifactPath = "client/bio-commandline/build/libs"
+        project.ext.artifactName = "PTSubmit-2.0.jar"
+    }
+
+    finalizedBy "deployArtifact"
+}
 
 task updatePmcArtifact {
     doFirst {
@@ -61,6 +69,10 @@ task updatePmcArtifact {
         project.ext.artifactName = "pmc-processor-task-1.0.0.jar"
     }
 
+    finalizedBy "deployArtifact"
+}
+
+task deployArtifact {
     doLast {
         ssh.run {
             session(remotes[env]) {
