--- a/infrastructure/src/main/resources/setup/database/Dockerfile.test
+++ b/infrastructure/src/main/resources/setup/database/Dockerfile.test
@@ -3,3 +3,4 @@ ADD Schema.sql /docker-entrypoint-initdb.d/databaseSetup01.sql
 ADD Users.sql /docker-entrypoint-initdb.d/databaseSetup02.sql
 ADD AccessTag.sql /docker-entrypoint-initdb.d/databaseSetup03.sql
 ADD Projects.sql /docker-entrypoint-initdb.d/databaseSetup04.sql
+ADD Sequence.sql /docker-entrypoint-initdb.d/databaseSetup05.sql
