Pivotal # 169314439: Automaticaly Deploy Dev Submitter (#141)
* Auto Deploy Dev Submitter

Add the configuration to deploy dev submitter instance when merging to master

--- a/ci/submitter.yml
+++ b/ci/submitter.yml
@@ -5,12 +5,22 @@ build-submitter:
     paths:
       - submission/submission-webapp/build/libs/submission-webapp-1.0.0.jar
 
-deploy-dev-submitter:
-  stage: deploy-dev-submitter
-  when: manual
+.deploy-dev-submitter:
   dependencies:
     - build-submitter
   script: gradle deploySubmitter -Penv=dev -PdeployPath=/nfs/biostudies/.adm/apps/submitter/dev
+
+auto-deploy-dev-submitter:
+  extends: .deploy-dev-submitter
+  stage: auto-deploy-dev-submitter
+  only:
+    refs:
+      - master
+
+deploy-dev-submitter:
+  extends: .deploy-dev-submitter
+  stage: deploy-dev-submitter
+  when: manual
 
 deploy-beta-submitter:
   stage: deploy-beta-submitter
