--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:mysql://mysql-fg-biostudy.ebi.ac.uk:4469/biostd_beta
-    username: biostd
-    password: biostd
+    url: # Database connection URL
+    username:
+    password:
     driver-class-name: com.mysql.jdbc.Driver
 
   jpa:
@@ -26,9 +26,9 @@ app:
   basepath: # Absolute path to the folder to be used as storage
   tempDirPath: # Absolute of the temp folder to store files
   security:
+    tokenHash: # Token used for hash authentication
     filesDirPath: # Absolute path to the folder to be used for the user/groups files
-    environment: BETA
-    tokenHash: BIO-B3T4
+    environment: # Current application execution environment
     requiresActivation: # Indicates whether or not, new user need activation before being used
   notifications:
     smtp: smtp.ebi.ac.uk
