--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -16,6 +16,7 @@ spring:
     multipart:
       max-file-size: 20GB
       max-request-size: 20GB
+      location: ${app.tempDirPath}
 
 logging.file: logs/application_logs.txt
 logging:
