--- a/submission/persistence/build.gradle
+++ b/submission/persistence/build.gradle
@@ -10,6 +10,7 @@ plugins {
 dependencies {
     compile project(":commons:commons-util")
     compile project(":commons:commons-bio")
+    compile project(":commons:commons-serialization")
     compile project(":commons:commons-model-extended")
     compile(project(":commons:commons-test"))
 
