--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  boot:
+    admin:
+      client:
+        url: http://biostudy-prod.ebi.ac.uk:8590
   datasource:
     url: # Database connection URL
     username:
