Pivotal ID # 171884336: Register New Submitter In Dashboard
- Disable the admin registration by default
- Add spring boot admin dependency
- Update deprecated "compile" and "testCompile"

--- a/submission/submission-webapp/src/main/resources/application.yml
+++ b/submission/submission-webapp/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     admin:
       client:
         url: http://biostudy-prod.ebi.ac.uk:8590
+        enabled: false
   datasource:
     url: # Database connection URL
     username:
